--- a/templates/sound-pipewire/pipewire.conf.d/10-clock-rate.conf.j2
+++ b/templates/sound-pipewire/pipewire.conf.d/10-clock-rate.conf.j2
@@ -1,6 +1,6 @@
 context.properties = {
     ## Properties for the DSP configuration.
-    default.clock.rate          = 44100
+    default.clock.rate          = {{ pipeware_sample_rate }}
     default.clock.allowed-rates = [ 44100, 48000 ]
     #default.clock.quantum       = 1024
     #default.clock.min-quantum   = 32
