--- a/templates/flameshot/flameshot.desktop.j2
+++ b/templates/flameshot/flameshot.desktop.j2
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=FlameshotLauncher
 Exec=script --command "flameshot gui" /dev/null
-Terminal=true
+Terminal=false
 Icon=/usr/share/icons/hicolor/128x128/apps/flameshot.png
 Type=Application
 Comment=Stub for launch Flameshot. Details https://flameshot.org/docs/guide/wayland-help/
